Fixed another flickering background animation bug

--- a/src/index.css
+++ b/src/index.css
@@ -131,19 +131,6 @@ html {
     scroll-behavior: smooth;
 }
 
-#tsparticles-services {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    padding: 0;
-    pointer-events: none;
-    z-index: -1;
-}
-
 @media (min-width: 300px) {
     #scrollToTopButton {
         padding: 0.5rem;  /* Equivalent to xs:p-2 (8px) */
@@ -172,10 +159,24 @@ html {
 /*    height: calc(var(--vh, 1vh) * 100); !* Locks to computed height *!*/
 /*}*/
 
+#tsparticles-services {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    pointer-events: none;
+    z-index: -1;
+}
+
+
 #tsparticles-services canvas {
     position: fixed !important;
-    top: 0px !important;
-    left: 0px !important;
+    top: 0 !important;
+    left: 0 !important;
     width: 100vw !important;  /* Set to 100vw to cover full width */
     height: 100vh !important; /* Use vh cautiously or replace with % */
     pointer-events: none;
